# games

./: tictactoe.py
BattleShip/: .gitignore  Build MSVC 2022 Project.bat
BattleShip/src/: BattleshipServerClient.h  CMakeLists.txt  GameBoard.h  GamePieces.h  gettingStarted.cpp  main.cpp  net_common.h  net_connection.h  net_server.h
BattleShip/src/client/: CMakeLists.txt  SimpleClient.cpp
BattleShip/src/common/: CMakeLists.txt  net_client.h  net_common.h  net_connection.h  net_message.h
BattleShip/src/server/: CMakeLists.txt  SimpleServer.cpp
